fixed nav on small screen

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,9 +1,9 @@
 .nav-styles-md {
     font-family: "Cormorant Garamond";
-    font-size: "2vh";
+    font-size: 2vh;
 }
 
 .nav-styles-sm {
     font-family: "Cormorant Garamond";
-    font-size: "1vh";
+    font-size: 1.8vh;
 }
